# dicom2gif

./: .gitignore  LICENSE  README.md  pyproject.toml
dicom2gif/: __init__.py  __main__.py  dicom2gif.py  io.py  series.py
