[project]
name = "dicom2gif"
version = "1.0.0"
authors = [
    { name = "Marc Vornehm", email = "marc.vornehm@siemens-healthineers.com" }
]
description = "A tool to convert DICOM series to GIF/APNG/TIFF format."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "Pillow>=7.0.0",
    "pydicom",
]

[project.urls]
Homepage = "https://github.com/marcvornehm/dicom2gif"
Issues = "https://github.com/marcvornehm/dicom2gif/issues"

[project.scripts]
dicom2gif = "dicom2gif.__main__:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
